--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="\Black wood vertical.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>Vite + React</title>
+    <title>Blackwood Marketing</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+       
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
